<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_outline_whatshot_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_outline_history_24"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_outline_star_24"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_recommendation"
            android:icon="@drawable/ic_outline_checkroom_24"
            android:title="@string/menu_recommendation" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_outline_settings_24"
            android:title="@string/menu_setting" />
    </group>
</menu>